# clerk

./: .editorconfig  .gitignore  .mcp.json  CLAUDE.md  Cargo.toml  README.md
docs/: how-it-works.md  ideas.md  plan.md  system-prompt.md
src/: config.rs  main.rs  models.rs  search.rs  server.rs
src/storage/: index.rs  markdown.rs  mod.rs  split.rs
