[package]
name = "clerk-mcp"
version = "0.1.0"
edition = "2024"
description = "A personal information management MCP server for notes, todos, and documents"
license = "MIT"
readme = "README.md"

[dependencies]
rmcp = { version = "1.3", features = ["server", "schemars", "transport-io", "transport-streamable-http-server"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
dirs = "6"
anyhow = "1"
toml = "1.1"
axum = { version = "0.8", default-features = false, features = ["http1", "tokio"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde_yaml = "0.9"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
